--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -199,6 +199,11 @@ h2 {
     right: 0px;
 }
 
+li>a.tappable-active {
+    color: #fff;
+    background-color: #4286f5;
+}
+
 .page {
     position: absolute;
     width: 100%;
